<resources>
    <string name="app_name">链接社</string>
    <string name="fast_msg">快讯</string>
    <string name="msg">资讯</string>
    <string name="share">分享</string>
    <string name="please_down_load">更多资讯请下载\n链接社APP</string>
    <string name="share_to">分享至</string>
    <string name="we_chat">微信</string>
    <string name="we_pyq">朋友圈</string>
    <string name="bast_new_comments">最新评论</string>
    <string name="hot_comments">热门评论</string>
    <string name="recommended_note">相关资讯</string>
    <string name="dont_touch">拜托，不要碰底线哦!</string>
    <string name="cancel">取消</string>
    <string name="realse">发布</string>
    <string name="coin_type">币种</string>
    <string name="platform">平台</string>
    <string name="my_choose">自选</string>
    <string name="delete">删除</string>
    <string name="to_top">置顶</string>
    <string name="in_to_bbs">进吧</string>
    <string name="please_input_search_type">请输入关键字搜索</string>
    <string name="hot_coin">热门币种</string>
    <string name="search_history">搜索历史</string>
    <string name="clean_history">清除搜索历史</string>
    <string name="please_input_search_info">请输入搜索内容</string>
    <string name="no_search_history">暂时没有搜索历史</string>
    <string name="coin_bbs">币吧</string>
    <string name="active">活动</string>
    <string name="mind">我的</string>
    <string name="market">行情</string>
    <string name="firstpage">首页</string>
    <string name="focus_on_done">已关注</string>
    <string name="all">全部</string>
    <string name="hot">热门</string>
    <string name="enroll">报名</string>
    <string name="end">已结束</string>
    <string name="focus_on">关注</string>
    <string name="hot_message">热点</string>
    <string name="edit">编辑</string>
    <string name="fast_to_login">快速登录</string>
    <string name="collection">收藏</string>
    <string name="user_comment_1">评论</string>
    <string name="user_active">我参与的活动</string>
    <string name="user_comment_2">资讯评论</string>
    <string name="user_article">我的文章</string>
    <string name="abtou">关于</string>
    <string name="clear_cache">清除缓存</string>
    <string name="phone_number">手机号码</string>
    <string name="input_validation_code">输入验证码</string>
    <string name="validation_code">验证码</string>
    <string name="logo">头像</string>
    <string name="nick_name">昵称</string>
    <string name="gender">性别</string>
    <string name="birthdy">生日</string>
    <string name="edit_user_info">编辑资料</string>
    <string name="woman">女</string>
    <string name="man">男</string>
    <string name="sure_logout">确认退出登录？</string>
    <string name="sure_clear_cache">确认清除缓存？</string>
    <string name="clear_cache_succ">缓存清除成功</string>
    <string name="logout_succ">退出登录成功</string>
    <string name="update_logo_succ">头像更换成功</string>
    <string name="please_input_nick_name">请输入昵称</string>
    <string name="update_nick_name_succ">昵称修改成功</string>
    <string name="no_fast_msg">暂时没有快讯</string>
    <string name="no_msg">暂时没有资讯</string>
    <string name="no_article">暂时没有文章</string>
    <string name="no_collection">暂时没有收藏</string>
    <string name="no_my_active">暂时没有参与的活动</string>
    <string name="no_coin_info">暂时没有币种信息</string>
    <string name="no_search_info">没有搜索到你想要的内容</string>
    <string name="no_platform_info">暂时没有平台信息</string>
    <string name="no_coin_bbs">暂时没有币吧</string>
    <string name="no_active">暂时没有活动</string>
    <string name="no_approve_user">暂时没有报名用户</string>
    <string name="no_add_market">暂时没有行情</string>
    <string name="no_bbs_circular">暂时没有圈子信息</string>
    <string name="author">作者:</string>
    <string name="message_frome">来源:</string>
    <string name="show_your_idea">说出你的看法</string>
    <string name="please_input_comment_info">请输入评论内容</string>
    <string name="please_input_replycomment_info">请输入回复内容</string>
    <string name="comment_succ">评价成功</string>
    <string name="release_succ">发布成功</string>
    <string name="release_fail">发布失败</string>
    <string name="comment_fall">评价失败</string>
    <string name="comment_detail">评论详情</string>
    <string name="come_here_sit">来,坐下谈谈</string>
    <string name="done">完成</string>
    <string name="add_market_title">添加自选</string>
    <string name="you_have_add">您已添加过自选</string>
    <string name="set_to_top_succ">置顶成功</string>
    <string name="add_market_succ">添加成功</string>
    <string name="coin_price">币价</string>
    <string name="focus_num">关注量:</string>
    <string name="post_num">发帖量:</string>
    <string name="bbs_cancel_succ">取消关注成功</string>
    <string name="bbs_focuse_on_succ">关注成功</string>
    <string name="please_input_key">请输入关键字</string>
    <string name="bbs_circular">圈子</string>
    <string name="bbs_today_num">今日跟贴:</string>
    <string name="please_input_info">请输入内容:</string>
    <string name="old_note">原文</string>
    <string name="no_comment">暂时没有评论</string>
    <string name="no_dynamic">暂时没有动态</string>
    <string name="about_us">关于我们</string>
    <string name="gender_update_succ">性别修改成功</string>
    <string name="birthday_update_succ">生日修改成功</string>
    <string name="collect_succ">收藏成功</string>
    <string name="collect_cancel_succ">取消收藏成功</string>
    <string name="commen_details">评论详情</string>
    <string name="no_user_info">暂时没有用户信息</string>
    <string name="user_center">个人中心</string>
    <string name="update_tip">更新提示</string>
    <string name="update_now">立即更新</string>
    <string name="no_hot_coin">暂时没有热门币种</string>
    <string name="share_succ">分享成功</string>
    <string name="share_fail">分享失败</string>
    <string name="share_cancel">取消分享</string>
    <string name="cant_share_message">没有文件权限，无法分享快讯。</string>
    <string name="quote_change">涨跌幅:</string>
    <string name="todayvol">成交(24h):</string>
    <string name="into_bbs_title">现在有%1$s个帖子在讨论，你也一起来吧!</string>

    <string name="activity_nick_name">昵称</string>
    <string name="plate_hot">热门版块</string>
    <string name="plate_all">全部版块</string>
    <string name="introduce">介绍</string>
    <string name="up_coin">上涨币种</string>
    <string name="down_coin">下跌币种</string>
    <string name="total_coin_">币种数量</string>

</resources>
