<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="bottom"
        android:background="@color/gray_bg"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radio_main_tab_1"
            style="@style/main_tab_radio"
            android:layout_height="42dp"
            android:layout_gravity="bottom"
            android:checked="true"
            android:drawableTop="@drawable/main_buttom_tab_1"
            android:text="@string/firstpage" />

        <RadioButton
            android:id="@+id/radio_main_tab_2"
            style="@style/main_tab_radio"
            android:drawableTop="@drawable/main_buttom_tab_2"
            android:text="@string/market" />

        <RadioButton
            style="@style/main_tab_radio"
            android:drawableTop="@drawable/main_buttom_tab_3"
            android:text="@string/coin_bbs"
            android:visibility="gone" />

        <RadioButton
            android:id="@+id/radio_main_tab_3"
            style="@style/main_tab_radio"
            android:drawableTop="@drawable/main_buttom_tab_3"
            android:text="板块" />

        <RadioButton
            android:id="@+id/radio_main_tab_4"
            style="@style/main_tab_radio"
            android:drawableTop="@drawable/main_buttom_tab_4"
            android:text="@string/active" />

        <RadioButton
            android:id="@+id/radio_main_tab_5"
            style="@style/main_tab_radio"
            android:drawableTop="@drawable/main_buttom_tab_5"
            android:text="@string/mind" />
    </RadioGroup>
</layout>