<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="40dp">

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/text_black_cd"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/tv_release"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:gravity="center"
                android:text="@string/realse"
                android:textColor="@color/text_black_cd"
                android:textSize="14sp" />


        </FrameLayout>

        <View style="@style/style_split_line" />

        <EditText
            android:id="@+id/edit_comment"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/show_your_idea"
            android:padding="10dp"
            android:textColor="@color/text_black_cd"
            android:textColorHint="@color/app_text_gray" />


    </LinearLayout>
</layout>
