<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="15dp"
        android:paddingBottom="20dp">

        <View
            android:id="@+id/empty_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/gender_choose_bg"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_man"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/man"
                android:textColor="#3DA3FF"
                android:textSize="16sp" />

            <View style="@style/style_split_line" />

            <TextView
                android:id="@+id/tv_woman"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:text="@string/woman"
                android:textColor="#3DA3FF"
                android:textSize="16sp" />


        </LinearLayout>


        <TextView
            android:id="@+id/tv_cancle"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/gender_choose_bg"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/app_text_color"
            android:textSize="16sp" />

    </LinearLayout>
</layout>