<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <FrameLayout
                    android:id="@+id/fra_finish"
                    android:layout_width="60dp"
                    android:layout_height="60dp">

                    <ImageView
                        android:layout_width="22dp"
                        android:layout_height="22dp"
                        android:layout_gravity="center"
                        android:src="@drawable/x" />

                </FrameLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/login_bg" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/name_icon" />


            </FrameLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="+86"
                    android:textColor="@color/text_black_cd"
                    android:textSize="15sp" />

                <View
                    style="@style/style_split_vline"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="#e2e2e2" />

                <EditText
                    android:id="@+id/edit_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/phone_number"
                    android:inputType="phone"
                    android:singleLine="true"
                    android:textColorHint="@color/app_hint_color"
                    android:textSize="15sp" />

            </LinearLayout>

            <View
                style="@style/style_split_line"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="#e2e2e2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="20dp"
                android:inputType="number"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edti_userpass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/input_validation_code"
                    android:textColorHint="@color/app_hint_color"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tv_code"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:text="@string/validation_code"
                    android:textColor="@color/app_text_color_022454"
                    android:textSize="15sp" />


            </LinearLayout>

            <View
                style="@style/style_split_line"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:background="#e2e2e2" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="250dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:background="@drawable/selector_blue"
                android:text="@string/fast_to_login"
                android:textColor="@color/white"
                android:textSize="15sp" />


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:visibility="invisible">

                <View
                    style="@style/style_split_line"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="10dp"
                    android:background="#e2e2e2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:text="第3方登录"
                    android:textColor="#737373"
                    android:textSize="15sp" />

            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="35dp"
                android:orientation="horizontal"
                android:visibility="invisible">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/share_qq" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@color/white"
                        android:text="QQ登录"
                        android:textColor="#737373"
                        android:textSize="15sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/share_we_chat" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@color/white"
                        android:text="微信登录"
                        android:textColor="#737373"
                        android:textSize="15sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:src="@drawable/share_weibo" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:background="@color/white"
                        android:text="微博登录"
                        android:textColor="#737373"
                        android:textSize="15sp" />


                </LinearLayout>


            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</layout>
